# kelivo

./: pubspec.yaml
.github/workflows/: pr-check.yml
android/: gradle.properties
android/app/: build.gradle.kts
dependencies/kelivo_secure_core/: ffigen.yaml  pubspec.yaml
dependencies/kelivo_secure_core/hook/: build.dart
dependencies/kelivo_secure_core/lib/: kelivo_secure_core.dart  kelivo_secure_core_bindings_generated.dart
dependencies/kelivo_secure_core/native/: Cargo.toml
dependencies/kelivo_secure_core/native/include/: kelivo_secure_core.h
dependencies/kelivo_secure_core/native/src/: android.rs  database.rs  lib.rs  opaque_client.rs  record.rs  windows.rs
dependencies/kelivo_secure_core/protocol/: Cargo.toml
dependencies/kelivo_secure_core/protocol/src/: lib.rs
dependencies/kelivo_secure_core/server_wasm/: Cargo.toml
dependencies/kelivo_secure_core/server_wasm/src/: lib.rs
dependencies/kelivo_secure_core/test/: opaque_client_test.dart
dependencies/kelivo_sync_api_client/: pubspec.yaml
dependencies/kelivo_sync_api_client/lib/: kelivo_sync_api_client.dart
doc/branch/feature-cloud-sync/: share.md
doc/branch/feature-custom-domain/: share.md
doc/branch/feature-e2ee-content-gate/: share.md
doc/branch/feature-e2ee-foundation/: share.md
doc/branch/feature-e2ee-opaque-protocol-poc/: share.md
doc/branch/feature-e2ee-sync-cutoff/: share.md
doc/branch/feature-e2ee-sync-state-retirement/: share.md
doc/branch/feature-e2ee-v3-transport/: share.md
doc/branch/feature-opaque-native-client-abi/: share.md
doc/branch/feature-opaque-secret-state-boundary/: share.md
doc/branch/feature-opaque-server-wasm/: share.md
doc/branch/feature-remove-legacy-hive-migration/: share.md
doc/branch/fix-android-release-signing-guard/: share.md
doc/branch/fix-cloud-sync-pending-status/: share.md
doc/branch/fix-cloud-sync-v2/: share.md
doc/branch/main/: share.md
doc/branch/sync-upstream-sqlite/: share.md
drift_schemas/app_database/: drift_schema_v12.json
integration_test/: database_platform_capabilities_test.dart  database_v2_release_capabilities_test.dart  p0_performance_baseline_test.dart  restore_process_harness_test.dart
integration_test/support/: restore_complete_bundle_fixture.dart  restore_process_hooks.dart
lib/: main.dart
lib/core/database/: app_database.dart  app_database.g.dart  chat_database_gateway.dart  (+5 more)
lib/desktop/: desktop_settings_page.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb  app_zh_Hans.arb  app_zh_Hant.arb
lib/utils/: app_directories.dart  platform_utils.dart  sandbox_path_resolver.dart
test/: desktop_provider_detail_pane_test.dart  settings_provider_assistant_avatar_ux_test.dart  settings_provider_assistant_detail_outline_test.dart  settings_provider_assistant_tab_layout_test.dart  settings_provider_chat_suggestions_test.dart  settings_provider_collapse_thinking_steps_test.dart  settings_provider_delete_models_test.dart  settings_provider_desktop_message_nav_buttons_mode_test.dart  settings_provider_image_cropper_test.dart  settings_provider_ios_background_test.dart  settings_provider_launch_count_test.dart  settings_provider_local_font_test.dart  settings_provider_reasoning_support_test.dart  settings_provider_regeneration_preferences_test.dart  settings_provider_tool_result_summary_test.dart
tool/: run_restore_process_harness.dart
tool/openapi/: generate.ps1
(+406 files in other folders)
