[package]
name = "kelivo_secure_core_native"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "kelivo_secure_core"
crate-type = ["cdylib"]

[dependencies]
zeroize = "=1.9.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
] }

[target.'cfg(target_os = "android")'.dependencies]
getrandom = "=0.2.15"
jni = "=0.21.1"
libc = "=0.2.155"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
